--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/http": "^0.6.4",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "v-photoswipe": "^1.0.3-1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
