--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.8",
     "v-photoswipe": "^1.0.3-1",
     "vue": "^2.6.14",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
